# esports

./: Cargo.toml  Dockerfile  README.md  build.sh  compose.yml  esports-deployment.yaml  start_server.sh
account-service/: .env  Cargo.toml
account-service/migrations/2021-10-15-104402_create_users/: up.sql
account-service/src/: lib.rs  main.rs  schema.rs
account-service/src/api/: health_check.rs  mod.rs  user.rs
account-service/src/data/: mod.rs
account-service/src/io/: mod.rs  refresh_password_publisher.rs
account-service/src/model/: claims.rs  credentials.rs  mod.rs  password_reset_claims.rs  password_reset_request.rs  user.rs
account-service/src/util/: mod.rs
account-service/tests/: lib.rs  util.rs
core/: Cargo.toml
core-macro/: Cargo.toml
core-macro/src/: lib.rs
core/src/: lib.rs  prelude.rs
core/src/api/: mod.rs
core/src/crypto/: mod.rs
core/src/data/: mod.rs
core/src/error/: mod.rs
core/src/jwt/: mod.rs
core/src/messages/kafka/: mod.rs
docker/account-service/: Dockerfile
docker/base/: Dockerfile
docker/images/esports-db/: init.sql
integration-tests/: Cargo.toml
integration-tests/src/: main.rs
integration-tests/src/account/: mod.rs
integration-tests/src/helper/: mod.rs
k8s/: core.yml  esports.yml  postgres.yml
notification-service/: .env  Cargo.toml
notification-service/src/: main.rs
notification-service/src/model/: mod.rs
notification-service/src/resources/: template.html
notification-service/src/util/: mod.rs
testbrotli/: Cargo.toml
