[package]
name = "account-service"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15"
num_cpus = "1.13.0"
core = { path = "../core" }
core-macro = { path = "../core-macro" }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "0.8.2", features = ["serde", "v4"]}
serde = { version = "1", features = ["derive"] }
serde_json = "1"
diesel = { version = "1.4.8", features = ["serde_json", "chrono", "postgres", "r2d2", "uuidv07"] }
log = { version = "0.4", features = ["std", "serde"] }
env_logger = "0.9"
lazy_static = "1.4.0"
regex = "1.5.4"
validator = { version = "0.14", features = ["derive", "phone"] }
failure = "0.1.8"