[package]
name = "core"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.10.0"
actix-web = "3.3.2"
dotenv = "0.15.0"
postgres = "0.19.2"
diesel = { version = "1.4.8", features = ["serde_json", "chrono", "postgres", "r2d2", "uuidv07"] }
validator = { version = "0.14", features = ["derive", "phone"] }
jsonwebtoken = "8.0.0-beta.2"
actix-http = "2"
failure = "0.1.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
